# bkmr-lsp

./: .bumpversion.toml  .envrc  DEVELOPMENT.md  Makefile  README.md  TODO.md  UNIVERSAL_SNIPPETS.md
bkmr-lsp/: Cargo.toml
bkmr-lsp/src/: backend.rs  backend_new.rs  lib.rs  main.rs
bkmr-lsp/src/domain/: completion.rs  language.rs  mod.rs  snippet.rs
bkmr-lsp/src/repositories/: bkmr_repository.rs  mock_repository.rs  mod.rs  snippet_repository.rs
bkmr-lsp/src/services/: command_service.rs  completion_service.rs  document_service.rs  language_translator.rs  mod.rs
bkmr-lsp/tests/: integration_test_interpolation.rs  test_backend.rs  test_error_handling.rs  test_lsp_integration.rs  test_lsp_protocol.rs  test_utils.rs
scripts/: debug.sh  demo_language_filtering.py  integration_test.sh  lsp_debug_client.py  simple-incremental-test.py  start-lsp-with-logs.sh  test-gh-expect-15.py  test-incremental-typing.py  test-real-behavior.py  test-real-nvim.sh  test_completion_behavior.py  test_filetype_extraction.py  test_lsp.py  test_lsp.sh  test_lsp2.sh  test_text_replacement.py
vim-bkmr-lsp/: README.md  install.sh
vim-bkmr-lsp/autoload/: bkmr_lsp.vim
vim-bkmr-lsp/doc/: bkmr_lsp.txt
vim-bkmr-lsp/plugin/: bkmr_lsp.vim
vim-bkmr-lsp/settings/: bkmr_lsp.vim
